--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,7 @@ body {
 	background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
 	background-size: cover;
     height: calc(100vh - 164px);
-    color: #555;
+    color: Black;
     font-family: "Lato";
 }
 
@@ -28,36 +28,36 @@ body {
 }
 
 .shop-now-button {
-    background: black;
+    background: #198754;
     color: white;
     min-width: 260px;
 }
 
-.btn-black {
-    background: black;
+.btn-color {
+    background: #198754;
     color: white;
 }
 
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
-.btn-black:hover,
-.btn-black:active,
-.btn-black:focus {
-    background: #222;
+.btn-color:hover,
+.btn-color:active,
+.btn-color:focus {
+    background: #198754;
     color: white;
 }
 
-.text-black {
-    color: #000 !important;
+.text-color {
+    color: #198754 !important;
 }
 
-.border-black {
-    border: 1px solid black !important;
+.border-color {
+    border: 1px solid #198754 !important;
 }
 
-.bg-black {
-    background: #000 !important;
+.bg-color {
+    background: #198754 !important;
 }
 
 /* --------------------------------- Media queries */
