Content and styling changes to the home page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     {% endblock %}
 
     {% block corecss %}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -127,4 +128,17 @@
 
 
   </body>
+  <div class="card text-center">
+    <div class="card-body">
+      <h5 class="card-title">Links</h5>
+      <p class="card-text">Sources of site content.</p>
+      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px;" target="_blank" title="Pictures">Pexels.com</a>
+      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px;" target="_blank" title="Pictures">Pexels.com</a>
+      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px;" target="_blank" title="Pictures">Pexels.com</a>
+      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px;" target="_blank" title="Pictures">Pexels.com</a>
+    </div>
+  </div>
 </html>
+
+
+
