--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -13,25 +13,25 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Clothing
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="plan-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Nutrition Plans
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Activewear &amp; Essentials</a>
-                <a href="" class="dropdown-item">Jeans</a>
-                <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+            <div class="dropdown-menu border-0" aria-labelledby="plan-link">
+                <a href="" class="dropdown-item">Vegan</a>
+                <a href="" class="dropdown-item">Vegetarian</a>
+                <a href="" class="dropdown-item">Pescatarian</a>
+                <a href="" class="dropdown-item">Standard</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Homeware
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="excercise-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Exercise Plans
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Bed &amp; Bath</a>
-                <a href="" class="dropdown-item">Kitchen &amp; Dining</a>
-                <a href="" class="dropdown-item">All Homeware</a>
+            <div class="dropdown-menu border-0" aria-labelledby="excercise-link">
+                <a href="" class="dropdown-item">Cardio</a>
+                <a href="" class="dropdown-item">Weights</a>
+                <a href="" class="dropdown-item">Hybrid</a>
             </div>
         </li>
 
@@ -42,7 +42,6 @@
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
                 <a href="" class="dropdown-item">New Arrivals</a>
                 <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
                 <a href="" class="dropdown-item">All Specials</a>
             </div>
         </li>
