Changed coloring on the footer links.

--- a/templates/base.html
+++ b/templates/base.html
@@ -132,10 +132,10 @@
     <div class="card-body">
       <h5 class="card-title">Links</h5>
       <p class="card-text">Sources of site content.</p>
-      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px;" target="_blank" title="Pictures">Pexels.com</a>
-      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px;" target="_blank" title="Pictures">Pexels.com</a>
-      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px;" target="_blank" title="Pictures">Pexels.com</a>
-      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px;" target="_blank" title="Pictures">Pexels.com</a>
+      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
+      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
+      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
+      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
     </div>
   </div>
 </html>
