--- a/templates/base.html
+++ b/templates/base.html
@@ -130,9 +130,8 @@
   </body>
   <div class="card text-center">
     <div class="card-body">
-      <h5 class="card-title">Links</h5>
-      <p class="card-text">Sources of site content.</p>
-      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
+      <h5 class="card-title">Links to sources</h5>
+      <a href="https://codeinstitute.net/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Course Provider">Code Institute</a>
       <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
       <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
       <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
