--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,7 @@
                                     <a href="" class="dropdown-item">Product Management</a>
                                 {% endif %}
                                 <a href="" class="dropdown-item">My Profile</a>
+                                <a href="https://8000-antonythornton-ms4fitnes-fnjr2o7qigg.ws-eu40.gitpod.io/admin/" target="_blank" class="dropdown-item">Admin</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
                                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
