--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     {% endblock %}
 
     {% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block corejs %}
@@ -86,9 +87,9 @@
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
                                     {% if grand_total %}
-                                        ${{ grand_total|floatformat:2 }}
+                                        £{{ grand_total|floatformat:2 }}
                                     {% else %}
-                                        $0.00
+                                        £0.00
                                     {% endif %}
                                 </p>
                             </div>
@@ -107,11 +108,6 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
-        <div id="delivery-banner" class="row text-center">
-            <div class="col bg-color text-white">
-                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
-            </div>            
-        </div>
     </header>
 
     {% if messages %}
@@ -129,13 +125,15 @@
 
 
   </body>
-  <div class="card text-center">
-    <div class="card-body">
-      <h5 class="card-title">Links to sources</h5>
-      <a href="https://codeinstitute.net/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Course Provider">Code Institute</a>
-      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
-      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
-      <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
+  <footer>
+    <div class="card text-center">
+        <div class="card-body">
+        <h5 class="card-title">Links to sources</h5>
+        <a href="https://codeinstitute.net/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Course Provider">Code Institute</a>
+        <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
+        <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
+        <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
+        </div>
     </div>
-  </div>
+</footer>
 </html>
