Formatting changes to login template.
Not sure if it should be done here or not but seems to work ok.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -84,6 +84,15 @@ body {
 }
 
 
+
+.login_page {
+    text-align: left;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 5%;
+}
+
+
 /* --------------------------------- Media queries */
 
 /* Slightly larger container on xl screens */
