--- a/templates/base.html
+++ b/templates/base.html
@@ -131,8 +131,8 @@
         <h5 class="card-title">Links to sources</h5>
         <a href="https://codeinstitute.net/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Course Provider">Code Institute</a>
         <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
-        <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
-        <a href="https://www.pexels.com/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Pexels.com</a>
+        <a href="https://getbootstrap.com/docs/5.0/examples/heroes/" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">Bootstrap5</a>
+        <a href="https://github.com/Antony-Thornton" class="btn btn-success" style="margin: 1px; background-color: #198754;" target="_blank" title="Pictures">More from the developer</a>
         </div>
     </div>
 </footer>
