Format changes to header and base template.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -93,6 +93,12 @@ body {
 }
 
 
+.header_break {
+    width: 100%;
+    height: 30px;
+    background-color: #198754;
+}
+
 /* --------------------------------- Media queries */
 
 /* Slightly larger container on xl screens */
