--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <title>The Veggie Guy Fitness {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top">
+    <header class="container-fluid">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
@@ -108,6 +108,8 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
+        <div class="header_break">
+        </div>
     </header>
 
     {% if messages %}
@@ -115,6 +117,7 @@
     {% endif %}
 
     {% block page_header %}
+
     {% endblock %}
 
     {% block content %}
