Added cookbook link from project 3 to nav bar as it ties in nicely with this project.

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -50,5 +50,10 @@
                 <a href="" class="dropdown-item">All Specials</a>
             </div>
         </li>
+        <li class="nav-item dropdown">
+            <a href="https://cook-book-antony.herokuapp.com/" target="_blank" class="logo-font font-weight-bold nav-link text-black mr-5">
+                Cookbook
+            </a>
+        </li>
     </ul>
 </div>
