Updated all allauth templates to look for my base.html template.
Also removed br from sign in as the issue where the sign in was hidden behind the header is now fixed.

--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -1,6 +1,5 @@
-{% extends "account/base.html" %}
-
-{% load i18n %}
+{% extends "base.html" %}
+<!-- Removed "account/"-->
 
 {% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
 
