--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,22 +1,11 @@
 {% extends "base.html" %}
-
+<!-- Removed "account/"-->
 {% load i18n %}
 {% load account socialaccount %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
 <section class="login_page">
 
   <h1 class=" text-color">{% trans "Sign In" %}</h1>
