--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,5 +1,5 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
+<!-- Removed "account/"-->
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
