--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,7 +10,7 @@
     <div class="container my-5">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h1 class="display-4 logo-font text-black">
+            <h1 class="display-4 logo-font text-color">
                 Browse our products and plans here
             </h1>
             <p class="lead">Looking to change your life? Browse our collection of Exercise and Nutrition plans.</p>
@@ -30,7 +30,7 @@
       <div class="container my-5">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h1 class="display-4 logo-font text-black">
+            <h1 class="display-4 logo-font text-color">
                 Browse our Nutrition plans
             </h1>
             <p class="lead">We have plans to suit a wide range of people. From standard to special diets we have something for everyone.</p>
@@ -50,7 +50,7 @@
       <div class="container my-5">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h1 class="display-4 logo-font text-black">
+            <h1 class="display-4 logo-font text-color">
                 Browse our Exercise plans
             </h1>
             <p class="lead">We have plans to suit a wide range of people. From standard to special diets we have something for everyone.</p>
