--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -24,8 +24,8 @@
             <div class="dropdown-menu border-0" aria-labelledby="plan-link">
                 <a href="" class="dropdown-item">Vegan</a>
                 <a href="" class="dropdown-item">Vegetarian</a>
-                <a href="" class="dropdown-item">Pescatarian</a>
                 <a href="" class="dropdown-item">Standard</a>
+                <a href="{% url 'products' %}?category=Vegan,Vegetarian,Standard" class="dropdown-item">All Plans</a>
             </div>
         </li>
 
