--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -6,7 +6,28 @@
 
 {% block content %}
  
+<div class="container mb-2">
+    <div class="row">
+        <div class="col">
+            <hr>
+            <h2 class="logo-font mb-4">Shopping Cart</h2>
+            <hr>
+        </div>
+    </div>
 
-<h1>CART</h1>
-
+    <div class="row">
+        <div class="col">
+            {% if cart_items %}
+                <div class="table-responsive rounded"></div>
+            {% else %}
+                <p class="lead mb-5">Your cart is empty.</p>
+                
+                <div>
+                    <img src="https://pngimg.com/uploads/shopping_cart/shopping_cart_PNG72.png" class="img-fluid" alt="Responsive image" style="width: 100% \9; ">
+                </div>
+                <a href="{% url 'products' %}" class="btn btn-success" style="margin: 1px; background-color: blue;" title="Course Provider"> <i class="fas fa-chevron-left"></i> Keep Shopping</a>
+            {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock %}
