Added functionality and python for updating products.
Not currently working.

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -45,6 +45,37 @@
                             <td class="py-3 w-25">
                                 <p class="my-0">{{ item.quantity }}</p>
                             </td>
+
+                            <td class="py-3 w-25">
+                                <form class="form update-form" method="POST" action="{% url 'adjust_cart' item.item_id %}">
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <button class="decrement-qty btn btn-sm btn-black rounded-0" style="background-color: red;" 
+                                                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                    <span>
+                                                        <i class="fas fa-minus fa-sm"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                            <input class="form-control form-control-sm qty_input" type="number"
+                                                name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                                data-item_id="{{ item.item_id }}"
+                                                id="id_qty_{{ item.item_id }}">
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn btn-sm btn-black rounded-0" style="background-color: green;"
+                                                    data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                    <span>
+                                                        <i class="fas fa-plus fa-sm"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                              
+                                <a class="update-link text-info"><small>Update</small></a>
+                            </td>
                             <td class="py-3">
                                 <p class="my-0">£{{ item.product.price }}</p>
                             </td>
@@ -53,7 +84,7 @@
                                 <button type="button" class="btn btn-danger">X</button>
                             </td>
                         </tr>
-                        
+                    </form>
                     {% endfor %}
                     <tr>
                         <td colspan="5" class="pt-5 text-right">
@@ -77,9 +108,36 @@
                 <div>
                     <img src="https://pngimg.com/uploads/shopping_cart/shopping_cart_PNG72.png" class="img-fluid" alt="Responsive image" style="width: 100% \9; ">
                 </div>
-                <a href="{% url 'products' %}" class="btn btn-success" style="margin: 1px; background-color: blue;" title="Course Provider"> <i class="fas fa-chevron-left"></i> Keep Shopping</a>
+                <a class="btn btn-success" style="margin: 1px; background-color: blue;" title="Course Provider"> <i class="fas fa-chevron-left"></i> Keep Shopping</a>
             {% endif %}
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/products.html' %}
+
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var size = $(this).data('size');
+        var url = `/bag/remove/${itemId}`;
+        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+
+        $.post(url, data)
+         .done(function() {
+             location.reload();
+         });
+    })
+</script>
 {% endblock %}
