--- a/static/css/base.css
+++ b/static/css/base.css
@@ -110,6 +110,21 @@ body {
 
 }
 
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link,
+.update-link,
+.remove-item {
+    cursor: pointer;
+}
+
+
 /* --------------------------------- Media queries */
 
 /* Slightly larger container on xl screens */
