--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -70,7 +70,9 @@
                                         <a class="update-link text-info">Update Qty
                                         </a>
                                     </button>
-                                    <button style="background-color: red; color: white;" id="remove_{{ item.item_id ">Remove Items</button>
+                                        <a href="{% url 'remove_from_cart' item.item_id %}" class="text-info" id="remove_{{ item.item_id }}">
+                                            Delete
+                                        </a>
                                   </td>
                                   <td class="py-3">
                                     <p class="my-0">£{{ item.product.price }}</p>
@@ -103,7 +105,7 @@
                 <div>
                     <img src="https://pngimg.com/uploads/shopping_cart/shopping_cart_PNG72.png" class="img-fluid" alt="Responsive image" style="width: 100% \9; ">
                 </div>
-                <a class="btn btn-success" style="margin: 1px; background-color: blue;" title="Course Provider"> <i class="fas fa-chevron-left"></i> Keep Shopping</a>
+                <a href="{% url 'products' %} " class="btn btn-success" style="margin: 1px; background-color: blue;" title="Course Provider"> <i class="fas fa-chevron-left"></i> Keep Shopping</a>
             {% endif %}
         </div>
     </div>
@@ -125,7 +127,7 @@
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var url = `/cart/remove/${itemId}`;
+        var url = `/cart/remove/${itemId}/`;
         var data = {'csrfmiddlewaretoken': csrfToken};
 
         $.post(url, data)
