Small formatting changes.

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -70,8 +70,8 @@
                                         <a class="update-link text-info">Update Qty
                                         </a>
                                     </button>
-                                        <a href="{% url 'remove_from_cart' item.item_id %}" class="text-info" id="remove_{{ item.item_id }}">
-                                            Delete
+                                        <a href="{% url 'remove_from_cart' item.item_id %}" class="text-info" style="float: right;" id="remove_{{ item.item_id }}">
+                                            Delete Item
                                         </a>
                                   </td>
                                   <td class="py-3">
