--- a/static/css/base.css
+++ b/static/css/base.css
@@ -125,6 +125,22 @@ body {
 }
 
 
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
+
 /* --------------------------------- Media queries */
 
 /* Slightly larger container on xl screens */
