--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -77,7 +77,7 @@
                                         </a>
                                   </td>
                                   <td class="py-3">
-                                    <p class="my-0">£{{ item.product.price | sub_total:item.quantity }}</p>
+                                    <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
                                   </td>
                                   
                                   </tr>
@@ -95,7 +95,7 @@
                     <tr>
                         <td colspan="5" class="text-right">
                             <a href="{% url 'products' %}" class="btn btn-success" style="margin: 1px; background-color: blue;" title="Course Provider"> <i class="fas fa-chevron-left"></i> Keep Shopping</a>
-                            <a href="{% url 'products' %}" class="btn btn-success" style="margin: 1px; background-color: gold; color: black;" title="Course Provider"> <i class="fas fa-chevron-left"></i> Secure Checkout</a>
+                            <a href="{% url 'checkout' %}" class="btn btn-success" style="margin: 1px; background-color: gold; color: black;" title="Course Provider"> <i class="fas fa-chevron-left"></i> Secure Checkout</a>
                         </td>
                     </tr>
                 </table>
