--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
                                 {% if request.user.is_superuser %}
                                     <a href="" class="dropdown-item">Product Management</a>
                                 {% endif %}
-                                <a href="" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="https://8000-antonythornton-ms4fitnes-fnjr2o7qigg.ws-eu42.gitpod.io/admin/" target="_blank" class="dropdown-item">Admin</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
