Added pictures to be used for products and header changes.
Changed the header links to reflect actual plans for site.

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -31,23 +31,12 @@
 
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="excercise-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Exercise Plans
+                Exercise Equipment
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="excercise-link">
                 <a href="" class="dropdown-item">Cardio</a>
                 <a href="" class="dropdown-item">Weights</a>
                 <a href="" class="dropdown-item">Hybrid</a>
-            </div>
-        </li>
-
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Special Offers
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">All Specials</a>
             </div>
         </li>
         <li class="nav-item dropdown">
