--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -43,5 +43,10 @@
                 Cookbook
             </a>
         </li>
+        <li class="nav-item dropdown">
+            <a href="{% url 'contact' %}" target="_blank" class="logo-font font-weight-bold nav-link text-black mr-5">
+                Contact
+            </a>
+        </li>
     </ul>
 </div>
