--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -44,7 +44,7 @@
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a href="{% url 'contact' %}" target="_blank" class="logo-font font-weight-bold nav-link text-black mr-5">
+            <a href="{% url 'contact' %}" class="logo-font font-weight-bold nav-link text-black mr-5">
                 Contact
             </a>
         </li>
