--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-12 col-lg-6" style="margin-bottom: 10px;">
             <p class="text-muted">Please fill out the form below to contact us. All information is private and will not be shared with anyone.</p>
-            <form>
+            <form class="form update-form" method="POST" action="{% url 'contact_form_post' %}">{% csrf_token %}
                 <div class="mb-3">
                     <label for="fullName" class="form-label" required>Full Name</label>
                     <input type="name" class="form-control" id="fullName" placeholder="Full name" required>
@@ -33,8 +33,8 @@
                         <textarea class="form-control"></textarea>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-success">Submit</button>
-                <button type="reset" class="btn btn-danger">Clear Form</button>
+            <button class="btn btn-success" style="margin: 1px; background-color: Green;">Submit Form</button>    
+            </form>
         </div>
     </div>
 
