--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
-                        <span class="input-group-text" id="message">message</span>
+                        <span class="input-group-text" id="message">Message</span>
                         <textarea class="form-control" name="message"></textarea>
                     </div>
                 </div>
