--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -84,12 +84,13 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4 offset-lg-2" style="margin-bottom: 50px;">
-                    <form class="form update-form" method="POST" action="">{% csrf_token %}
+                    <form class="form update-form" method="POST" action="{% url 'productReview' product.id %}">{% csrf_token %}
                         <h1>Leave a review</h1>
+                            <input type="hidden" name="product_id" id="product_id" data-item_id="{{ product.id }}">
                         <div class="mb-3">
                             <div class="input-group">
-                                <span class="input-group-text" id="message">Review</span>
-                                <textarea class="form-control" name="message"></textarea>
+                                <span class="input-group-text" id="review">Review</span>
+                                <textarea class="form-control" name="review"></textarea>
                             </div>
                         </div>
                         <button class="btn btn-success" style="margin: 1px; background-color: Green;">Submit Review</button>    
