--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -105,21 +105,12 @@
                                             <div class="card-header">
                                                 All Customer Reviews
                                             </div>
-                                            <div class="card-body">
-                                            
+                                            <div class="card-body">                                                
+                                            {% for item_review in review %}
                                             <blockquote class="blockquote mb-0">
-                                                <p>A well-known quote, contained in a blockquote element.</p>
+                                                <p>{{ review }}</p>
                                             </blockquote>
-                                            <blockquote class="blockquote mb-0">
-                                                <p>A well-known quote, contained in a blockquote element.</p>
-                                            </blockquote>
-                                            <blockquote class="blockquote mb-0">
-                                                <p>A well-known quote, contained in a blockquote element.</p>
-                                            </blockquote>
-                                            <blockquote class="blockquote mb-0">
-                                                <p>A well-known quote, contained in a blockquote element.</p>
-                                            </blockquote>
-                                        </div>
+                                            {% endfor %}
                                     </div>
                                 </div>
                             </div>
