Changed text on home page.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@
             <h1 class="display-4 logo-font text-color">
                 Browse our products and plans here
             </h1>
-            <p class="lead">Looking to change your life? Browse our collection of Exercise and Nutrition plans.</p>
+            <p class="lead">Looking to change your life? Browse our collection of Exercise equipment and Nutrition books.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                 <div >
                     <h4 style="padding-bottom: 15px;">
@@ -31,9 +31,9 @@
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
             <h1 class="display-4 logo-font text-color">
-                Browse our Nutrition plans
+                Browse our Nutrition book
             </h1>
-            <p class="lead">We have plans to suit a wide range of people. From standard to special diets we have something for everyone.</p>
+            <p class="lead">We have books to suit a wide range of people. From standard to special diets we have something for everyone.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                 <div >
                     <h4 style="padding-bottom: 15px;">
@@ -51,9 +51,9 @@
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
             <h1 class="display-4 logo-font text-color">
-                Browse our Exercise plans
+                Browse our Exercise Equipment
             </h1>
-            <p class="lead">We have plans to suit a wide range of people. From standard to special diets we have something for everyone.</p>
+            <p class="lead">Setting up a home gym? Looking to get fit? Check out our range of equipment.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                 <div >
                     <h4 style="padding-bottom: 15px;">
