--- a/static/css/base.css
+++ b/static/css/base.css
@@ -181,6 +181,11 @@ body {
 }
 
 
+.test {
+    color: purple;
+    font-size: large;
+}
+
 
 /* --------------------------------- Media queries */
 
