--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -23,20 +23,13 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
-                    {% if product.category %}
-                    <p class="small mt-1 mb-0">
-                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                        {{ product.category.friendly_name }}
-                        </a>
-                    </p>
-                    {% endif %}
-                    <p class="mt-3">{{ product.description }}</p>
+                    <p class="mb-0" style="font-size: 3rem;">{{ product.name }}</p>
+                    <p class="lead mb-0 text-left font-weight-bold" style="font-size: 2rem; color: green;">£{{ product.price }}</p>
+                    <p class="mt-3" style="font-size: 1.75rem;">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="col-12">
-                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <p class="mt-3 test"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
