Inline style added until I can fix base.css css not loading.

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,12 +1,12 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a href="{% url 'home' %}" class="logo-font font-weight-bold nav-link text-black mr-5">
+            <a href="{% url 'home' %}" class="logo-font font-weight-bold nav-link text-black mr-5" style="color:#198754">
                 Home
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:#198754">
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
@@ -18,7 +18,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="plan-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="plan-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:#198754">
                 Nutrition Plans
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="plan-link">
@@ -29,7 +29,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="excercise-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="excercise-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:#198754">
                 Exercise Equipment
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="excercise-link">
@@ -39,12 +39,12 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a href="https://cook-book-antony.herokuapp.com/" target="_blank" class="logo-font font-weight-bold nav-link text-black mr-5">
+            <a href="https://cook-book-antony.herokuapp.com/" target="_blank" class="logo-font font-weight-bold nav-link text-black mr-5" style="color:#198754">
                 Cookbook
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a href="{% url 'contact' %}" class="logo-font font-weight-bold nav-link text-black mr-5">
+            <a href="{% url 'contact' %}" class="logo-font font-weight-bold nav-link text-black mr-5" style="color:#198754">
                 Contact
             </a>
         </li>
