--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -2,8 +2,8 @@
     <li class="list-inline-item">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
-              <div><i class="fas fa-search fa-lg"></i></div>
-              <p class="my-0">Search</p>
+              <div><i class="fas fa-search fa-lg" style="color:#198754"></i></div>
+              <p class="my-0"style="color:#198754">Search</p>
           </div>
       </a>
       <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
@@ -24,8 +24,8 @@
   <li class="list-inline-item dropdown">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
-              <div><i class="fas fa-user fa-lg"></i></div>
-              <p class="my-0">My Account</p>
+              <div><i class="fas fa-user fa-lg"style="color:#198754"></i></div>
+              <p class="my-0" style="color:#198754">My Account</p>
           </div>
       </a>
       <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -43,10 +43,10 @@
       </div>
   </li>
   <li class="list-inline-item">
-      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_cart' %}">
+      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_cart' %}" style="color:#198754">
           <div class="text-center">
-              <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-              <p class="my-0">
+              <div><i class="fas fa-shopping-bag fa-lg" style="color:#198754"></i></div>
+              <p class="my-0" style="color:#198754">
                   {% if grand_total %}
                       ${{ grand_total|floatformat:2 }}
                   {% else %}
