--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
-                                    <a href="" class="dropdown-item">Product Management</a>
+                                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
                                 {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="https://8000-antonythornton-ms4fitnes-fnjr2o7qigg.ws-eu42.gitpod.io/admin/" target="_blank" class="dropdown-item">Admin</a>
