Added links for editing and deleting products.

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -67,6 +67,14 @@
                                                 </a>
                                             </p>
                                             {% endif %}
+                                            {% if request.user.is_superuser %}
+                                                <small class="ml-3">
+                                                    <a href="{% url 'edit_product' product.id %}">Edit Product</a>
+                                                </small>
+                                                <small class="ml-3">
+                                                    <a href="{% url 'delete_product' product.id %}">Delete Product</a>
+                                                </small>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
