--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -55,7 +55,14 @@
                                 </div>
                             </div>
                         </div>
-
+                        {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a href="{% url 'edit_product' product.id %}">Edit Product</a>
+                        </small>
+                        <small class="ml-3">
+                            <a href="{% url 'delete_product' product.id %}">Delete Product</a>
+                        </small>
+                        {% endif %}
                             <div class="col-12">
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
