--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -21,7 +21,13 @@
                 <h1>No more than 6 digits for price.</h1>
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data"> <!-- enctype to allow image to upload properly -->
                     {% csrf_token %}
-                    {{ form | crispy }}
+                    {% for field in form %}
+                        {% if field.name != 'image' %}
+                            {{ field | as_crispy_field }}
+                        {% else %}
+                            {{ field }}
+                        {% endif %}
+                    {% endfor %}
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="" type="submit">Update Product</button>
