--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -30,7 +30,7 @@
                 <div class="mb-3">
                     <div class="input-group">
                         <span class="input-group-text" id="message">Message</span>
-                        <textarea class="form-control" name="message"></textarea>
+                        <textarea class="form-control" name="message" required></textarea>
                     </div>
                 </div>
             <button class="btn btn-success" style="margin: 1px; background-color: Green;">Submit Form</button>    
