Added required to review form.
Could previously submit as blank.

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -84,7 +84,7 @@
                             <input type="hidden" name="product_id" id="product_id" data-item_id="{{ product.id }}">
                         <div class="mb-3">
                             <div class="input-group">
-                                <span class="input-group-text" id="review">Review</span>
+                                <span class="input-group-text" id="review"  required>Review</span>
                                 <textarea class="form-control" name="review"></textarea>
                             </div>
                         </div>
