--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,7 @@
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
             <h1 class="display-4 logo-font text-color">
-                Browse our products and plans here
+                Browse our products and books here
             </h1>
             <p class="lead">Looking to change your life? Browse our collection of Exercise equipment and Nutrition books.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
@@ -23,7 +23,7 @@
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-              <img class="rounded-lg-3" src="static/assets/images/site images/pexels-format-1029757.jpg" alt="" width="720">
+              <img class="rounded-lg-3" src="static/assets/images/site images/pexels-nathan-cowley-1153369.jpg" alt="" width="720">
           </div>
         </div>
       </div>
@@ -31,7 +31,7 @@
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
             <h1 class="display-4 logo-font text-color">
-                Browse our Nutrition book
+                Browse our Nutrition books
             </h1>
             <p class="lead">We have books to suit a wide range of people. From standard to special diets we have something for everyone.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-              <img class="rounded-lg-3" src="static/assets/images/site images/pexels-bich-tran-1059383.jpg" alt="" width="720">
+              <img class="rounded-lg-3" src="static/assets/images/site images/pexels-karolina-grabowska-4397841.jpg" alt="" width="720">
           </div>
         </div>
       </div>
