--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -8,7 +8,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Products</h2>
+                <h1 class="logo-font">Products</h1>
                 {% for c in current_categories %}
                     <a href="{% url 'products' %}?category={{ c.name }}" class="badge badge-success" style="font-weight: normal; font-weight: 1rem; font-size:1rem;">{{ c.friendly_name }}</a>
                 {% endfor %}
@@ -42,8 +42,11 @@
                 </div>
                 <div class="row">
                     {% for product in products %}
-                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card h-100 border-0">
+                        <!-- Fixing display issues using the col-12 classes -->
+
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                              <div class="col-md-4">
                                 {% if product.image %}
                                 <a href="{% url 'product_detail' product.id %}">
                                     <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -53,54 +56,30 @@
                                     <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 </a>
                                 {% endif %}
-                                <div class="card-body pb-0 test">
-                                    <p class="mb-0 test" style="font-size: 3rem;">{{ product.name }}</p>
-                                </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
-                                    <div class="row">
-                                        <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold" style="font-size: 2rem; color: green;">£{{ product.price }}</p>
-                                            {% if product.category %}
-                                            <p class="small mt-1 mb-0">
-                                                <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                                                {{ product.category.friendly_name }}
-                                                </a>
-                                            </p>
-                                            {% endif %}
-                                            {% if request.user.is_superuser %}
+                              </div>
+                              <div class="col-md-8">
+                                <div class="card-body">
+                                  <h5 class="card-title product_name">{{ product.name }}</h5>
+                                  <p class="lead mb-0 text-left font-weight-bold product_price" >£{{ product.price }}</p>
+                                  {% if product.category %}
+                                  <p class="small mt-1 mb-0">
+                                      <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                                        Category: {{ product.category.friendly_name }}
+                                      </a>
+                                  </p>
+                                  {% endif %}
+                                  {% if request.user.is_superuser %}
                                                 <small class="ml-3">
                                                     <a href="{% url 'edit_product' product.id %}">Edit Product</a>
                                                 </small>
                                                 <small class="ml-3">
                                                     <a href="{% url 'delete_product' product.id %}">Delete Product</a>
                                                 </small>
-                                            {% endif %}
-                                        </div>
-                                    </div>
+                                {% endif %}     
                                 </div>
+                              </div>
                             </div>
-                        </div>
-                        <!-- Fixing display issues using the col-12 classes -->
-                        {% if forloop.counter|divisibleby:1 %}
-                            <div class="col-12 d-sm-none mb-5">
-                                <hr>
-                            </div>
-                        {% endif %}                        
-                        {% if forloop.counter|divisibleby:2 %}
-                            <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                                <hr>
-                            </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:3 %}
-                            <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                                <hr>
-                            </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:4 %}
-                            <div class="col-12 d-none d-xl-block mb-5">
-                                <hr>
-                            </div>
-                        {% endif %}
+                          </div>
                     {% endfor %}
                 </div>
             </div>
