--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -40,11 +40,11 @@
                         </p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row product_card_row">
                     {% for product in products %}
                         <!-- Fixing display issues using the col-12 classes -->
 
-                        <div class="card mb-3" style="max-width: 540px;">
+                        <div class="card mb-3 product_card" style="max-width: 540px; ">
                             <div class="row g-0">
                               <div class="col-md-4">
                                 {% if product.image %}
